infra/k8s/mongo-express-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express-depl
spec:
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express
          resources:
            limits:
              memory: "128Mi"
              cpu: "300m"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-srv
spec:
  selector:
    app: mongo-express
  ports:
    - name: db
      protocol: TCP
      port: 8081
      targetPort: 8081
