infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/limit-rps: "5"
    nginx.ingress.kubernetes.io/limit-rpm: "300"
    nginx.ingress.kubernetes.io/limit-connections: "10"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ticketing.edu
      http:
        paths:
          #
          # auth API routes
          #
          - pathType: Prefix
            path: /api/v1/users/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 4000
          - pathType: Prefix
            path: /api/v1/auth/?(.*)
            backend:
              service:
                name: auth-srv
                port:
                  number: 4000
          #
          # client routes
          #
          - pathType: Prefix
            path: /?(.*)
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
